...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Notifications'),
        actions: <Widget>[
          PopupMenuButton<NotificationsOptions>(
            key: const Key('popupMenu'),
            tooltip: 'More options',
            onSelected: _selectOption,
            itemBuilder: (BuildContext context) {
              return [
                const PopupMenuItem(
                  key: Key('RNS'),
                  value: NotificationsOptions.resetNotificationSettings,
                  child: Text('Reset notification settings'),
                )
              ];
            },
          ),
        ],
      ),
      body: ListView(
        key: const Key('ListView'),
        children: <Widget>[
          FutureBuilder(
            key: const Key('Conversation tones'),
            future: _conversationTones,
            builder: (context, snapshot) {
              Null Function(bool value) onChanged;
              bool conversationTones =
                  SharedPreferencesHelpers.defaultConversationTones;
              switch (snapshot.connectionState) {
...
          _buildFutureSettingItem(
              context, 'Light', lightOptionsList, _light, _getLightText, false,
              (LightOptions value) {
            _setLight(value.index);
          }),
          FutureBuilder(
            key: const Key('High_priority_notifications'),
            future: _useHighPriorityNotifications,
            builder: (context, snapshot) {
              Null Function(bool value) onChanged;
              bool useHighPriorityNotifications =
                  SharedPreferencesHelpers.defaultUseHighPriorityNotifications;
              switch (snapshot.connectionState) {
...
          }),
          _buildFutureSettingItem(context, 'Light', lightOptionsList,
              _groupLight, _getLightText, false, (LightOptions value) {
            _setGroupLight(value.index);
          }),
          FutureBuilder(
            key: const Key('Group_high_priority_notifications'),
            future: _groupUseHighPriorityNotifications,
            builder: (context, snapshot) {
              Null Function(bool value) onChanged;
              bool groupUseHighPriorityNotifications = SharedPreferencesHelpers
                  .defaultGroupUseHighPriorityNotifications;
              switch (snapshot.connectionState) {
...
                onChanged: onChanged,
              );
            },
          ),
          const Divider(),
          const SettingItemHeader(
            title: 'Calls',
            padding: EdgeInsets.only(
                top: 16.0, left: 24.0, right: 24.0, bottom: 4.0),
          ),
          _buildFutureSettingItem(context, 'Ringtone', ringtoneOptionsList,
              _callsRingtone, _getRingtoneText, true, (RingtoneOptions value) {
            _setCallsRingtone(value.index);
...
