...
            _isSearching = true;
            _searchBarController?.text = "";
          });
        },
      ),
      PopupMenuButton<HomeOptions>(
        key: const Key('moreOptions'),
        tooltip: "More options",
        onSelected: _selectOption,
        itemBuilder: (BuildContext context) {
          return _popupMenus[_tabIndex];
        },
      ),
...
        ),
        const PopupMenuItem<HomeOptions>(
          value: HomeOptions.newBroadcast,
          child: Text("New broadcast"),
        ),
        const PopupMenuItem<HomeOptions>(
          key: Key('Web'),
          value: HomeOptions.whatsappWeb,
          child: Text("WhatzApp Web"),
        ),
        const PopupMenuItem<HomeOptions>(
          key: Key('Starred'),
          value: HomeOptions.starredMessages,
          child: Text("Starred messages"),
        ),
        const PopupMenuItem<HomeOptions>(
          key: Key('Settings'),
          value: HomeOptions.settings,
          child: Text("Settings"),
        ),
        const PopupMenuItem<HomeOptions>(
          value: HomeOptions.readMe,
          child: Text("README", style: TextStyle(color: Colors.red)),
...
                          Tab(
                            child: Row(
                              mainAxisAlignment: MainAxisAlignment.center,
                              children: <Widget>[
                                const Text(
                                  "STATUS",
                                  key: Key('Status'),
                                  style: _textBold,
                                ),
                                FutureBuilder(
                                  future: _statusList,
                                  builder: (context, snapshot) {
                                    if (snapshot.data == null) {
...
