...
        title: const Text('Chats'),
      ),
      body: ListView(
        children: <Widget>[
          FutureBuilder(
            future: _enterIsSend,
            key: const Key('Enter_is_Send'),
            builder: (context, snapshot) {
              Null Function(bool value) onChanged;
              bool enterIsSend = SharedPreferencesHelpers.defaultEnterIsSend;
              switch (snapshot.connectionState) {
                case ConnectionState.none:
                case ConnectionState.active:
...
                padding: const EdgeInsets.only(right: 16.0, left: 70.0, top: 12.0, bottom: 12.0),
              );
            },
          ),
          FutureBuilder(
            future: _mediaVisibility,
            key: const Key('Visibility'),
            builder: (context, snapshot) {
              Null Function(bool value) onChanged;
              bool mediaVisibility = SharedPreferencesHelpers.defaultMediaVisibility;
              switch (snapshot.connectionState) {
                case ConnectionState.none:
                case ConnectionState.active:
...
