...
          ),
          const Divider(
            height: 16.0,
          ),
          FutureBuilder(
            future: _showSecurityNotifications,
            key: const Key('Security_notifications'),
            builder: (context, snapshot) {
              Null Function(bool value) onChanged;
              bool showSecurityNotifications = SharedPreferencesHelpers.defaultShowSecurityNotifications;
              switch (snapshot.connectionState) {
                case ConnectionState.none:
                case ConnectionState.active:
...
